# agentic-actions-guard

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  action.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  (+3 more)
agentic_actions_guard/: __init__.py  cli.py  scanner.py
docs/: accepted-risk-cadence.md  action-pinning.md  adoption-decision-report.md  adoption-recipes.md  ai-actions-threat-model.md  ai-github-actions-safety-checklist.md  ai-patch-handoff.md  ai-workflow-risk-gallery.md  allowlist-policy.md  curated-ai-actions.md  example-review-report.md  finding-lifecycle.md  fixture-corpus.md  github-code-scanning.md  maintainer-review-playbook.md  openssf-scorecard-comparison.md  output-schema.md  request-workflow-review.md  review-response-flow.md  risk-matrix.md  rule-reference.md  scanner-precision.md  step-summary-example.md  two-stage-ai-workflows.md  workflow-run-handoff.md  workflow-templates.md
examples/: agentic-actions-guard.allowlist.json  risky-ai-autofix.yml  risky-ai-output-shell.yml  risky-ai-triage.yml  risky-comment-triggered-review.yml  risky-pr-review.yml  risky-release-notes.yml  risky-reusable-workflow-input.yml  risky-scheduled-batch-triage.yml  risky-workflow-run-handoff.yml  safer-ai-autofix.yml  safer-ai-output-report.yml  safer-comment-triggered-review.yml  safer-readonly-review.yml  safer-release-notes.yml  safer-scheduled-batch-triage.yml  safer-two-stage-triage.yml  safer-workflow-run-handoff.yml
tests/: test_cli.py  test_docs.py  test_examples.py  test_scanner.py
(+4 files in other folders)
