[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-actions-guard"
version = "1.7.1"
description = "Audit GitHub Actions workflows for risky AI-agent automation patterns."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "OSS Maintainer Safety Contributors" }]
keywords = ["github-actions", "oss", "security", "ai", "prompt-injection", "maintainers"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Security",
  "Topic :: Software Development :: Quality Assurance",
]

[project.scripts]
agentic-actions-guard = "agentic_actions_guard.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
